--- a/src/app/all-modules/employees/all-employees/employee-page-content/employee-page-content.component.html
+++ b/src/app/all-modules/employees/all-employees/employee-page-content/employee-page-content.component.html
@@ -903,6 +903,7 @@
                     <div class="tab-content">
                         <div id="emp_profile1" class="pro-overview tab-pane fade show active">
                             <div class="row">
+                                <input class="form-control" type="text" formControlName="Id" style="display: none;">
                                 <div class="col-sm-6">
                                     <div class="form-group">
                                         <label class="col-form-label">Company</label>
