Multi fied employee search

--- a/src/app/all-modules/employees/all-employees/employee-page-content/employee-page-content.component.html
+++ b/src/app/all-modules/employees/all-employees/employee-page-content/employee-page-content.component.html
@@ -27,16 +27,16 @@
 
     <!-- Search Filter -->
     <div class="row filter-row">
-        <div class="col-sm-6 col-md-3">
+        <!-- <div class="col-sm-6 col-md-3">
             <div class="form-group form-focus">
                 <input type="text" class="form-control floating" (input)="searchId($event.target.value)">
                 <label class=" focus-label">Employee ID</label>
             </div>
-        </div>
+        </div> -->
         <div class="col-sm-6 col-md-3">
             <div class="form-group form-focus">
-                <input type="text" class="form-control floating" (input)="searchName($event.target.value)">
-                <label class="focus-label">Employee Name</label>
+                <input type="text" class="form-control floating" (input)="searchEmployee($event.target.value)">
+                <label class="focus-label">Employee Code, Name</label>
             </div>
         </div>
         <!-- <div class="col-sm-6 col-md-3">
