login and dashboard

--- a/src/app/all-modules/dashboard/employee-dashboard/employee-dashboard.component.html
+++ b/src/app/all-modules/dashboard/employee-dashboard/employee-dashboard.component.html
@@ -7,7 +7,7 @@
                     <img alt="" src="assets/img/profiles/avatar-02.jpg">
                 </div>
                 <div class="welcome-det">
-                    <h3>Welcome, John Doe</h3>
+                    <h3>Welcome, Employee</h3>
                     <p>Monday, 20 May 2019</p>
                 </div>
             </div>
@@ -19,7 +19,7 @@
             <section class="dash-section">
                 <h1 class="dash-sec-title">Today</h1>
                 <div class="dash-sec-content">
-                    <div class="dash-info-list">
+                    <!-- <div class="dash-info-list">
                         <a  class="dash-card text-danger">
                             <div class="dash-card-container">
                                 <div class="dash-card-icon">
@@ -65,7 +65,7 @@
                                 </div>
                             </div>
                         </a>
-                    </div>
+                    </div> -->
 
                 </div>
             </section>
@@ -148,7 +148,7 @@
 
         <div class="col-lg-4 col-md-4">
             <div class="dash-sidebar">
-                <section>
+                <!-- <section>
                     <h5 class="dash-title">Projects</h5>
                     <div class="card">
                         <div class="card-body">
@@ -170,7 +170,7 @@
                             </div>
                         </div>
                     </div>
-                </section>
+                </section> -->
                 <section>
                     <h5 class="dash-title">Your Leave</h5>
                     <div class="card">
