--- a/src/app/all-modules/employees/all-employees/employee-page-content/employee-page-content.component.html
+++ b/src/app/all-modules/employees/all-employees/employee-page-content/employee-page-content.component.html
@@ -75,9 +75,9 @@
                     </div>
                 </div>
                 <h4 class="user-name m-t-10 mb-0 text-ellipsis"><a
-                        routerLink="/employees/employeeprofile">{{emp.firstname}}</a>
+                        routerLink="/employees/employeeprofile">{{emp.Name}}</a>
                 </h4>
-                <div class="small text-muted">{{emp.designation}}</div>
+                <div class="small text-muted">{{emp.EmployeeCode}}</div>
             </div>
         </div>
     </div>
