--- a/src/app/all-modules/dashboard/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/all-modules/dashboard/admin-dashboard/admin-dashboard.component.html
@@ -15,7 +15,7 @@
     <!-- /Page Header -->
 
     <div class="row">
-        <div class="col-md-6 col-sm-6 col-lg-6 col-xl-3">
+        <!-- <div class="col-md-6 col-sm-6 col-lg-6 col-xl-3">
             <div class="card dash-widget">
                 <div class="card-body">
                     <span class="dash-widget-icon"><i class="fa fa-cubes"></i></span>
@@ -25,7 +25,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="col-md-6 col-sm-6 col-lg-6 col-xl-3">
             <div class="card dash-widget">
                 <div class="card-body">
@@ -37,17 +37,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-6 col-sm-6 col-lg-6 col-xl-3">
-            <div class="card dash-widget">
-                <div class="card-body">
-                    <span class="dash-widget-icon"><i class="fa fa-diamond"></i></span>
-                    <div class="dash-widget-info">
-                        <h3>37</h3>
-                        <span>Tasks</span>
-                    </div>
-                </div>
-            </div>
-        </div>
+       
         <div class="col-md-6 col-sm-6 col-lg-6 col-xl-3">
             <div class="card dash-widget">
                 <div class="card-body">
@@ -59,9 +49,33 @@
                 </div>
             </div>
         </div>
+
+        <div class="col-md-6 col-sm-6 col-lg-6 col-xl-3">
+            <div class="card dash-widget">
+                <div class="card-body">
+                    <span class="dash-widget-icon"><i class="fa fa-cubes"></i></span>
+                    <div class="dash-widget-info">
+                        <h3>00</h3>
+                        <span>Title1</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-6 col-sm-6 col-lg-6 col-xl-3">
+            <div class="card dash-widget">
+                <div class="card-body">
+                    <span class="dash-widget-icon"><i class="fa fa-diamond"></i></span>
+                    <div class="dash-widget-info">
+                        <h3>00</h3>
+                        <span>Title2</span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <div class="row">
+    <!-- <div class="row">
         <div class="col-md-12">
             <div class="row">
                 <div class="col-md-6 text-center">
@@ -83,7 +97,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="row">
         <div class="col-md-12">
@@ -114,15 +128,15 @@
                                 <span class="d-block">Earnings</span>
                             </div>
                             <div>
-                                <span class="text-success">+12.5%</span>
+                                <span class="text-success">0%</span>
                             </div>
                         </div>
-                        <h3 class="mb-3">$1,42,300</h3>
+                        <h3 class="mb-3">$0</h3>
                         <div class="progress mb-2" style="height: 5px;">
                             <div class="progress-bar bg-primary" role="progressbar" style="width: 70%;"
                                 aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
-                        <p class="mb-0">Previous Month <span class="text-muted">$1,15,852</span></p>
+                        <p class="mb-0">Previous Month <span class="text-muted">$0</span></p>
                     </div>
                 </div>
 
@@ -133,15 +147,15 @@
                                 <span class="d-block">Expenses</span>
                             </div>
                             <div>
-                                <span class="text-danger">-2.8%</span>
+                                <span class="text-danger">0%</span>
                             </div>
                         </div>
-                        <h3 class="mb-3">$8,500</h3>
+                        <h3 class="mb-3">$0</h3>
                         <div class="progress mb-2" style="height: 5px;">
                             <div class="progress-bar bg-primary" role="progressbar" style="width: 70%;"
                                 aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
-                        <p class="mb-0">Previous Month <span class="text-muted">$7,500</span></p>
+                        <p class="mb-0">Previous Month <span class="text-muted">$0</span></p>
                     </div>
                 </div>
 
@@ -152,15 +166,15 @@
                                 <span class="d-block">Profit</span>
                             </div>
                             <div>
-                                <span class="text-danger">-75%</span>
+                                <span class="text-danger">0%</span>
                             </div>
                         </div>
-                        <h3 class="mb-3">$1,12,000</h3>
+                        <h3 class="mb-3">$0</h3>
                         <div class="progress mb-2" style="height: 5px;">
                             <div class="progress-bar bg-primary" role="progressbar" style="width: 70%;"
                                 aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
-                        <p class="mb-0">Previous Month <span class="text-muted">$1,42,000</span></p>
+                        <p class="mb-0">Previous Month <span class="text-muted">$0</span></p>
                     </div>
                 </div>
             </div>
@@ -169,99 +183,6 @@
 
     <!-- Statistics Widget -->
     <div class="row">
-        <div class="col-md-12 col-lg-12 col-xl-4 d-flex">
-            <div class="card flex-fill dash-statistics">
-                <div class="card-body">
-                    <h5 class="card-title">Statistics</h5>
-                    <div class="stats-list">
-                        <div class="stats-info">
-                            <p>Today Leave <strong>4 <small>/ 65</small></strong></p>
-                            <div class="progress">
-                                <div class="progress-bar bg-primary" role="progressbar" style="width: 31%"
-                                    aria-valuenow="31" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                        </div>
-                        <div class="stats-info">
-                            <p>Pending Invoice <strong>15 <small>/ 92</small></strong></p>
-                            <div class="progress">
-                                <div class="progress-bar bg-warning" role="progressbar" style="width: 31%"
-                                    aria-valuenow="31" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                        </div>
-                        <div class="stats-info">
-                            <p>Completed Projects <strong>85 <small>/ 112</small></strong></p>
-                            <div class="progress">
-                                <div class="progress-bar bg-success" role="progressbar" style="width: 62%"
-                                    aria-valuenow="62" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                        </div>
-                        <div class="stats-info">
-                            <p>Open Tickets <strong>190 <small>/ 212</small></strong></p>
-                            <div class="progress">
-                                <div class="progress-bar bg-danger" role="progressbar" style="width: 62%"
-                                    aria-valuenow="62" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                        </div>
-                        <div class="stats-info">
-                            <p>Closed Tickets <strong>22 <small>/ 212</small></strong></p>
-                            <div class="progress">
-                                <div class="progress-bar bg-info" role="progressbar" style="width: 22%"
-                                    aria-valuenow="22" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-md-12 col-lg-6 col-xl-4 d-flex">
-            <div class="card flex-fill">
-                <div class="card-body">
-                    <h4 class="card-title">Task Statistics</h4>
-                    <div class="statistics">
-                        <div class="row">
-                            <div class="col-md-6 col-6 text-center">
-                                <div class="stats-box mb-4">
-                                    <p>Total Tasks</p>
-                                    <h3>385</h3>
-                                </div>
-                            </div>
-                            <div class="col-md-6 col-6 text-center">
-                                <div class="stats-box mb-4">
-                                    <p>Overdue Tasks</p>
-                                    <h3>19</h3>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="progress mb-4">
-                        <div class="progress-bar bg-purple" role="progressbar" style="width: 30%" aria-valuenow="30"
-                            aria-valuemin="0" aria-valuemax="100">30%</div>
-                        <div class="progress-bar bg-warning" role="progressbar" style="width: 22%" aria-valuenow="18"
-                            aria-valuemin="0" aria-valuemax="100">22%</div>
-                        <div class="progress-bar bg-success" role="progressbar" style="width: 24%" aria-valuenow="12"
-                            aria-valuemin="0" aria-valuemax="100">24%</div>
-                        <div class="progress-bar bg-danger" role="progressbar" style="width: 26%" aria-valuenow="14"
-                            aria-valuemin="0" aria-valuemax="100">21%</div>
-                        <div class="progress-bar bg-info" role="progressbar" style="width: 10%" aria-valuenow="14"
-                            aria-valuemin="0" aria-valuemax="100">10%</div>
-                    </div>
-                    <div>
-                        <p><i class="fa fa-dot-circle-o text-purple mr-2"></i>Completed Tasks <span
-                                class="float-right">166</span></p>
-                        <p><i class="fa fa-dot-circle-o text-warning mr-2"></i>Inprogress Tasks <span
-                                class="float-right">115</span></p>
-                        <p><i class="fa fa-dot-circle-o text-success mr-2"></i>On Hold Tasks <span
-                                class="float-right">31</span></p>
-                        <p><i class="fa fa-dot-circle-o text-danger mr-2"></i>Pending Tasks <span
-                                class="float-right">47</span></p>
-                        <p class="mb-0"><i class="fa fa-dot-circle-o text-info mr-2"></i>Review Tasks <span
-                                class="float-right">5</span></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
         <div class="col-md-12 col-lg-6 col-xl-4 d-flex">
             <div class="card flex-fill">
                 <div class="card-body">
@@ -308,10 +229,105 @@
                 </div>
             </div>
         </div>
+
+        <div class="col-md-12 col-lg-12 col-xl-4 d-flex">
+            <div class="card flex-fill dash-statistics">
+                <div class="card-body">
+                    <h5 class="card-title">Statistics</h5>
+                    <div class="stats-list">
+                        <div class="stats-info">
+                            <p>Today Leave <strong>4 <small>/ 65</small></strong></p>
+                            <div class="progress">
+                                <div class="progress-bar bg-primary" role="progressbar" style="width: 31%"
+                                    aria-valuenow="31" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div>
+                        <!-- <div class="stats-info">
+                            <p>Pending Invoice <strong>15 <small>/ 92</small></strong></p>
+                            <div class="progress">
+                                <div class="progress-bar bg-warning" role="progressbar" style="width: 31%"
+                                    aria-valuenow="31" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div>
+                        <div class="stats-info">
+                            <p>Completed Projects <strong>85 <small>/ 112</small></strong></p>
+                            <div class="progress">
+                                <div class="progress-bar bg-success" role="progressbar" style="width: 62%"
+                                    aria-valuenow="62" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div>
+                        <div class="stats-info">
+                            <p>Open Tickets <strong>190 <small>/ 212</small></strong></p>
+                            <div class="progress">
+                                <div class="progress-bar bg-danger" role="progressbar" style="width: 62%"
+                                    aria-valuenow="62" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div>
+                        <div class="stats-info">
+                            <p>Closed Tickets <strong>22 <small>/ 212</small></strong></p>
+                            <div class="progress">
+                                <div class="progress-bar bg-info" role="progressbar" style="width: 22%"
+                                    aria-valuenow="22" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-12 col-lg-6 col-xl-4 d-flex">
+            <div class="card flex-fill">
+                <div class="card-body">
+                    <h4 class="card-title">Sample Statistics</h4>
+                    <div class="statistics">
+                        <div class="row">
+                            <div class="col-md-6 col-6 text-center">
+                                <div class="stats-box mb-4">
+                                    <p>Total Tasks</p>
+                                    <h3>385</h3>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-6 text-center">
+                                <div class="stats-box mb-4">
+                                    <p>Overdue Tasks</p>
+                                    <h3>19</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress mb-4">
+                        <div class="progress-bar bg-purple" role="progressbar" style="width: 30%" aria-valuenow="30"
+                            aria-valuemin="0" aria-valuemax="100">30%</div>
+                        <div class="progress-bar bg-warning" role="progressbar" style="width: 22%" aria-valuenow="18"
+                            aria-valuemin="0" aria-valuemax="100">22%</div>
+                        <div class="progress-bar bg-success" role="progressbar" style="width: 24%" aria-valuenow="12"
+                            aria-valuemin="0" aria-valuemax="100">24%</div>
+                        <div class="progress-bar bg-danger" role="progressbar" style="width: 26%" aria-valuenow="14"
+                            aria-valuemin="0" aria-valuemax="100">21%</div>
+                        <div class="progress-bar bg-info" role="progressbar" style="width: 10%" aria-valuenow="14"
+                            aria-valuemin="0" aria-valuemax="100">10%</div>
+                    </div>
+                    <div>
+                        <p><i class="fa fa-dot-circle-o text-purple mr-2"></i>Completed Tasks <span
+                                class="float-right">166</span></p>
+                        <p><i class="fa fa-dot-circle-o text-warning mr-2"></i>Inprogress Tasks <span
+                                class="float-right">115</span></p>
+                        <p><i class="fa fa-dot-circle-o text-success mr-2"></i>On Hold Tasks <span
+                                class="float-right">31</span></p>
+                        <p><i class="fa fa-dot-circle-o text-danger mr-2"></i>Pending Tasks <span
+                                class="float-right">47</span></p>
+                        <p class="mb-0"><i class="fa fa-dot-circle-o text-info mr-2"></i>Review Tasks <span
+                                class="float-right">5</span></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        
     </div>
     <!-- /Statistics Widget -->
 
-    <div class="row">
+    <!-- <div class="row">
         <div class="col-md-6 d-flex">
             <div class="card card-table flex-fill">
                 <div class="card-header">
@@ -426,7 +442,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="row">
         <div class="col-md-6 d-flex">
@@ -638,7 +654,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-6 d-flex">
+     <div class="col-md-6 d-flex">
             <div class="card card-table flex-fill">
                 <div class="card-header">
                     <h3 class="card-title mb-0">Recent Projects</h3>
@@ -797,7 +813,7 @@
                     <a routerLink="/projects/projectpage">View all projects</a>
                 </div>
             </div>
-        </div>
+        </div> 
     </div>
 
 </div>
