--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,10 @@
     <!-- Logo -->
     <div class="header-left">
         <a [routerLink]="['/dashboard']" class="logo">
-            <img src="assets/img/logo.png" width="40" height="40" alt="">
+
+            
+            <img *ngIf="IsAdmin" src="assets/img/logo-latest.png" width="200" height="50" alt="">
+            <img *ngIf="!IsAdmin" src="assets/img/logo-mudun.png" width="200" height="50" alt="">
         </a>
     </div>
     <!-- /Logo -->
@@ -48,7 +51,7 @@
             </a>
             <div class="dropdown-menu dropdown-menu-right">
                 <a  class="dropdown-item">
-                    <img src="assets/img/flags/us.png" alt="" height="16"> English
+                    <img src="assets/img/flags/us.png" alt="" height="16"> Arabic
                 </a>
                 <a  class="dropdown-item">
                     <img src="assets/img/flags/fr.png" alt="" height="16"> French
@@ -138,7 +141,7 @@
 
         <li class="nav-item dropdown has-arrow main-drop">
             <a href="javascript:" class="dropdown-toggle nav-link" data-toggle="dropdown">
-                <span class="user-img"><img src="assets/img/profiles/avatar-021.jpg" alt="">
+                <span class="user-img"><img src="assets/img/profiles/avatar-02134.jpg" alt="">
                     <span class="status online"></span></span>
                 <span>Admin</span>
             </a>
